@@ -39,5 +39,23 @@ module OData
         lambda { svc.send('acronyms') }.should_not raise_error
       end
     end
+  
+    describe_private OData::Service do
+      describe "parse value" do
+        before(:each) do
+          # Required for the build_classes method
+          stub_request(:get, "http://test.com/test.svc/$metadata").
+          with(:headers => {'Accept'=>'*/*; q=0.5, application/xml', 'Accept-Encoding'=>'gzip, deflate'}).
+          to_return(:status => 200, :body => File.new(File.expand_path("../fixtures/edmx_empty.xml", __FILE__)), :headers => {})
+        end
+        
+        it "should not error on an 'out of range' date" do
+          # This date was returned in the Netflix OData service and failed with an ArgumentError: out of range using 1.8.7 (2010-12-23 patchlevel 330) [i386-mingw32]
+          svc = OData::Service.new "http://test.com/test.svc/"
+          element_to_parse = Nokogiri::XML.parse('<d:AvailableFrom m:type="Edm.DateTime">2100-01-01T00:00:00</d:AvailableFrom>').elements[0]
+          lambda { svc.parse_value(element_to_parse) }.should_not raise_exception
+        end
+      end
+    end
   end
 end
