@@ -1,2 +1,4 @@
 require 'ruby_odata'
 require 'webmock/rspec'
+
+Dir[File.expand_path('../support/**/*.rb', __FILE__)].each { |f| require f }
